--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   color: white;
   overflow: hidden;
   background: url("https://images.unsplash.com/photo-1663174494200-7802f72775ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
+background-size: cover;
 }
 h2 {
     text-transform: uppercase;
